ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  namespace: default
  annotations:
spec:
  defaultBackend:
    service:
      name: web
      port:
        number: 8080
  ingressClassName: nginx
  rules:
    - host:
    # host: foo.bar.com (empty => * => localhost)
      http:
        paths:
          - path: /hello-world
            pathType: Prefix
            backend:
              service:
                name: web
                port:
                  number: 8080
